--- a/releng/airootfs/home/astro/Desktop/calamares.desktop
+++ b/releng/airootfs/home/astro/Desktop/calamares.desktop
@@ -7,7 +7,7 @@ Keywords=calamares;system;installer;
 TryExec=calamares
 Exec=sh -c "pkexec calamares"
 Comment=Calamares — System Installer
-Icon=calamares
+Icon=/usr/share/icons/install.png
 Terminal=false
 StartupNotify=true
 Categories=Qt;System;
@@ -58,7 +58,7 @@ Icon[da]=calamares
 GenericName[da]=Systeminstallationsprogram
 Comment[da]=Calamares — Systeminstallationsprogram
 Name[de]=System installieren
-Icon[de]=calamares
+Icon[de]=install
 GenericName[de]=Installation des Betriebssystems
 Comment[de]=Calamares - Installation des Betriebssystems
 Name[el]=Εγκατάσταση συστήματος
