--- a/releng/airootfs/etc/calamares/modules/partition.conf
+++ b/releng/airootfs/etc/calamares/modules/partition.conf
@@ -156,7 +156,7 @@ defaultFileSystemType:  "btrfs"
 #
 # If not specified at all, uses *defaultFileSystemType* without a
 # warning (this matches traditional no-choice-available behavior best).
-# availableFileSystemTypes:  ["ext4","f2fs"]
+availableFileSystemTypes:  ["btrfs","ext4","f2fs"]
 
 # Show/hide LUKS related functionality in automated partitioning modes.
 # Disable this if you choose not to deploy early unlocking support in GRUB2
