--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -36,6 +36,7 @@ Architecture = auto
 #CheckSpace
 #VerbosePkgLists
 ParallelDownloads = 5
+ILoveCandy
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
